Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-39744

Regression: Object.keys() exposes hidden methods

XMLWordPrintable

    • cf93acbee66db96a6f7fab8607432b70ec5c0437 (qtdeclarative)

      The following snippet exposes the intentionally hidden methods deleteLater and destroyed (though typeof === "undefined" for them) starting with Qt 5.2:

      import QtQuick 2.0
      QtObject {
          id: myObj
          Component.onCompleted: console.log(Object.keys(myObj))
      }
      

      Prior to Qt 5.2 this produced:
      [objectName,onObjectNameChanged,objectNameChanged]

      Now it produces:
      [objectName,destroyed,destroyed,objectNameChanged,deleteLater,_q_reregisterTimers]

        For Gerrit Dashboard: QTBUG-39744
        # Subject Branch Project Status CR V

            shausman Simon Hausmann
            mbrasser Michael Brasser
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes